# blazingmq-sdk-python

./: .aspell.en.pws  .clang-format  .coveragerc  .flake8.cython  .gitignore  .isort.cfg  .markdownlint.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lint-docs.txt  requirements-test-coverage.txt  requirements-test.txt  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md
.github/workflows/: build.yaml  build_wheels.yml  dco-check.yaml  news-check.yaml
docs/: BUILD.md  Makefile  api_reference.rst  conf.py  examples.rst  user_guide.rst
examples/: consumer.py  consumer2.py  producer.py  producer_with_correlation.py
news/: 38.feature.rst  42.doc.rst  51.misc.rst  6.feature.rst  71.feature.rst  8.feature.rst  80.bugfix.rst
src/blazingmq/: __init__.py  _about.py  _authncb.py  _callbacks.py  _enums.py  _ext.exp  _ext.pyi  _ext.pyx  _ext.vers  _messages.py  _monitors.py  _script_name.py  _session.py  _six.py  _timeouts.py  _typing.py  exceptions.py  session_events.py  testing.py
src/cpp/: pybmq_ballutil.cpp  pybmq_ballutil.h  pybmq_gilacquireguard.cpp  pybmq_gilacquireguard.h  pybmq_gilreleaseguard.cpp  pybmq_gilreleaseguard.h  pybmq_messageutils.cpp  pybmq_messageutils.h  pybmq_mocksession.cpp  pybmq_mocksession.h  pybmq_refutils.cpp  pybmq_refutils.h  pybmq_session.cpp  pybmq_session.h  pybmq_sessioneventhandler.cpp  pybmq_sessioneventhandler.h
src/declarations/: bdef.pxd  bsl.pxd  bslma.pxd  pybmq.pxd
src/declarations/bde/: bdem.pxd  bdesb.pxd
src/declarations/bdl/: __init__.pxd  bdlt.pxd
src/declarations/bmq/: bmqa.pxd  bmqt.pxd
src/declarations/bsl/: bslma.pxd  bsls.pxd
src/declarations/dlc/: dlct.pxd
tests/: .flake8  conftest.py  test_pass.py
tests/broker-config/: bmqbrkrcfg.json  clusters.json
tests/broker-config/domains/: bmq.test.mmap.fanout.json  bmq.test.mmap.priority.json
tests/integration/: conftest.py  test_basic.py  test_confirm.py  test_deadlock_detection.py  test_examples.py  test_health_monitoring.py  test_post.py  test_queue.py
tests/unit/: conftest.py  support.py  test_authn_credential_cb_adapter.py  test_ball_log_redirection.py  test_consumption.py  test_ext_confirm.py  test_ext_post.py  test_ext_queue.py  test_ext_session.py  test_ext_session_sending_properties.py  test_messages.py  test_queue_options.py  test_session.py  test_session_events.py  test_session_options.py  test_session_sending_properties.py  test_timeouts.py
