[build-system]

requires = ['setuptools>=39.2.0',
            'Cython>=0.28.4, <3; python_version < "3.8"',
            'Cython >= 3, <4; python_version >= "3.8"',
            'wheel>=0.31.0',
            'pkgconfig>1.5.0']

build-backend = "setuptools.build_meta"

[project]
name = "blazingmq"
description = "Python BlazingMQ API"
readme = "README.md"
requires-python = ">=3.9,<3.14"
authors = [
    {name = "Bloomberg Finance LP"}
]
dynamic = ["version"]
license = {text = "Apache-2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.setuptools]
packages = ["blazingmq"]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "blazingmq._about.__version__"}

[tool.setuptools.package-data]
blazingmq = ["py.typed", "_ext.pyi"]

[tool.towncrier]
package     = "blazingmq"
package_dir = "src"
filename    = "CHANGELOG.md"
directory   = "news"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = "*-musllinux_*"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.linux.environment]
PKG_CONFIG_PATH="/usr/local/lib64/pkgconfig:/usr/lib64/pkgconfig"

[tool.cibuildwheel.macos.environment]
PKG_CONFIG_PATH="install/lib/pkgconfig"

[tool.cibuildwheel.linux]
before-all = [
  "yum install -y gdb curl pkgconfig ninja-build flex flex-devel zlib-devel openssl-devel",
  "DIR_INSTALL=/usr/local bash bin/build-manylinux.sh"
]

[tool.cibuildwheel.macos]
before-all = [
  "brew install cmake ninja flex bison zlib google-benchmark",
  "bash bin/build-macos-universal.sh"
]
before-test = [
  "codesign --remove-signature /Library/Frameworks/Python.framework/Versions/*/bin/python3 || true",
  "codesign --remove-signature /Library/Frameworks/Python.framework/Versions/*/Resources/Python.app/Contents/MacOS/Python || true",
]

# Override the default linux before-all for musl linux
[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
  "apk add --update gdb curl pkgconfig ninja flex flex-dev zlib-dev openssl-dev",
  "DIR_INSTALL=/usr/local bash bin/build-manylinux.sh"
]
