[build-system]

requires = ['setuptools>=39.2.0',
            'Cython>=0.28.4, <3; python_version < "3.8"',
            'Cython >= 3, <4; python_version >= "3.8"',
            'wheel>=0.31.0',
            'packaging>=24.2',
            'pkgconfig>1.5.0']

build-backend = "setuptools.build_meta"

[project]
name = "blazingmq"
description = "Python BlazingMQ API"
readme = "README.md"
requires-python = ">=3.9,<3.14"
authors = [
    {name = "Bloomberg Finance LP"}
]
dynamic = ["version"]
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.setuptools]
packages = ["blazingmq"]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "blazingmq._about.__version__"}

[tool.setuptools.package-data]
blazingmq = ["py.typed", "_ext.pyi"]

[tool.towncrier]
package     = "blazingmq"
package_dir = "src"
filename    = "CHANGELOG.md"
directory   = "news"

[tool.cibuildwheel]
build = ["cp3*"]
skip = "*-musllinux_*"
manylinux-x86_64-image = "manylinux_2_28"
build-frontend = "build"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = [
  "dnf install -y epel-release",
  "dnf install -y gdb curl pkgconfig ninja-build kernel-headers perl-IPC-Cmd",
  "dnf install -y bison bison-devel",
  "dnf install -y flex flex-devel",
  "dnf install -y google-benchmark-devel",
  "dnf copr enable -y swt2c/vcpkg-epel8",
  "dnf install -y vcpkg",
  "git clone https://github.com/microsoft/vcpkg.git $VCPKG_ROOT",
  "vcpkg install openssl zlib --triplet=$VCPKG_TRIPLET", 
  "DIR_INSTALL=/usr/local bash bin/build-manylinux.sh",
]

[tool.cibuildwheel.linux.environment]
VCPKG_ROOT = "$HOME/.local/share/vcpkg"
VCPKG_FORCE_SYSTEM_BINARIES = "true"
PKG_CONFIG_PATH="/usr/local/lib64/pkgconfig:/usr/lib64/pkgconfig"

[tool.cibuildwheel.macos]
before-all = [
  "brew install cmake ninja flex bison zlib google-benchmark",
  "bash bin/build-macos-universal.sh"
]
before-test = [
  "codesign --remove-signature /Library/Frameworks/Python.framework/Versions/*/bin/python3 || true",
  "codesign --remove-signature /Library/Frameworks/Python.framework/Versions/*/Resources/Python.app/Contents/MacOS/Python || true",
]

[[tool.cibuildwheel.overrides]]
select = "cp*-manylinux_x86_64"
inherit.environment = "prepend"
environment.VCPKG_TRIPLET = "x64-linux-dynamic"

# Override the default linux before-all for musl linux
[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
  "apk add --update gdb curl pkgconfig ninja flex flex-dev zlib-dev openssl-dev",
  "DIR_INSTALL=/usr/local bash bin/build-manylinux.sh"
]
